<resources>
    <string name="empty" />
    <!--SPLASH SCREEN-->
    <string name="app_name">Jeux d\'enfants&#160;</string>
    <string name="dev_name">NSAPP&#160;</string>
    <string name="touch_to_continue">Touchez l\'écran pour commencer&#160;</string>

    <!-- GET NAME-->
    <string name="what_is_name">Tout d\'abord, j\'ai besoin de connaitre ton prénom :&#160;</string>
    <string name="your_name">Ecris ton prénom&#160;</string>
    <string name="finish">J\'ai fini !&#160;</string>
    <string name="get_name_confirm_message_fmt">Ton prénom est bien \"%s\" ?&#160;</string>
    <string name="get_name_no_name_message">Tu n\'as pas renseigné ton prénom !&#160;</string>
    <string name="normal_valid_message">Oui !&#160;</string>
    <string name="normal_dismiss_message">Je me suis trompé !&#160;</string>
    <string name="normal_neutral_message">J\'ai compris !&#160;</string>

    <!-- RECEPTION-->
    <string name="reception_message_fmt">Bienvenue %s ! Commence par choisir ton activité :&#160;</string>
    <string name="differences_game">Jeu des différences&#160;</string>

    <!-- ERRORS GAME-->
    <string name="end_game">Tu as fini bravo ! Veux-tu voir les réponses ?</string>
</resources>
