<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashScreenRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="nsapp.childgames.SplashScreenActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <nsapp.childgames.view.MTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <nsapp.childgames.view.MTextView
            android:id="@+id/smileyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:rotation="90"
            android:text="@string/smiley"
            android:textColor="@android:color/white"
            android:textSize="35sp" />
    </LinearLayout>

    <nsapp.childgames.view.MTextView
        android:id="@+id/touchScreenTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:gravity="center"
        android:text="@string/touch_to_continue"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:visibility="gone" />

    <nsapp.childgames.view.MTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="@string/dev_name"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
</RelativeLayout>
