<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <nsapp.childgames.view.MTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:text="@string/what_is_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/big_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <nsapp.childgames.view.MTextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_textview"
                android:clickable="true"
                android:gravity="center"
                android:hint="@string/your_name"
                android:maxLength="35"
                android:padding="16dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="@dimen/normal_text" />

            <ImageView
                android:id="@+id/gumIV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/empty"
                android:src="@drawable/gum_imageview" />

            <nsapp.childgames.view.MTextView
                android:id="@+id/validTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_textview"
                android:clickable="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/finish"
                android:textColor="@color/green_text"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@android:color/holo_blue_light"
        android:keyBackground="@drawable/white_textview"
        android:keyTextColor="@color/white_text" />

</LinearLayout>
